# LangGadget-Telegram-ML-Contest

./: README.md  deb-packages.txt
resources/model/: saved_model.pb  test-report.json
resources/model/variables/: variables.data-00000-of-00001
src/: README.md
src/01_RepoFinder/: fileFinder.js  package-lock.json  package.json  repoFinder.js
src/04_LangGadgetLib/: CMakeLists.txt  tglang.cpp
src/04_LangGadgetLib/model/variables/: variables.index
src/AddinionalDatasetFiles_ForSpecialLanguages/test/: 1697373338467__Vala__Testing__TestSyncConflict__TestDownloadingConflictFile.vala  1697373339766__Vala__Testing__TestCapabilities__TestPushNotificationsAvailable_PushNotificationsPushNotificationsNotAvailableReturnFalse.vala  1697373480175__Vala__Testing__TestSyncEngine__TestDirectoryDownloadWithError.vala  1697373482603__Vala__Testing__TestCapabilities__TestUserStatus_UserStatusNotAvailableReturnFalse.vala  1697373483696__Vala__Testing__TestSyncEngine__TestDirectoryDownload.vala  1697373616373__Vala__Gui__SelectiveSyncTreeViewItem.vala  1697373617766__vala__euler1.vala  1697373760694__Vala__Testing__TestUtility__TestDurationToDescriptiveString.vala  1697373761797__Vala__Testing__TestSyncEngine__TestDirectoryEtagAfterIncompleteSync.vala  1697373807096__Vala__Testing__TestFolderWatcher__TestRemoveADirectory.vala  1697374738976__func__event.fc  1697375114765__func__common__packers.fc  1697375115966__func__jetton-minter.generated.fc  (+2 more)
src/documentations/: 01_install_requirements.md  02_dataset_generation.md  03_train.md  04_LangGadgetLib.md  05_supported_languages.md
(+96 files in other folders)
